added langchain parser functions for parsing response of llm in str to json

--- a/notebooks/learningLangchain.ipynb
+++ b/notebooks/learningLangchain.ipynb
@@ -249,6 +249,120 @@
     "service_response = chat(service_messages)\n",
     "print(service_response.content)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.output_parsers import ResponseSchema\n",
+    "from langchain.output_parsers import StructuredOutputParser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gift_schema = ResponseSchema(name =\"gift\", description =\"was the item purchased as a gift for someone else?answer true if yes else false\")\n",
+    "delivery_days_schema = ResponseSchema(name=\"delivery_days\",description=\"how many days was the product delivered in?if not mentioned return -1\")\n",
+    "price_value_schema = ResponseSchema(name =\"price_value\", description=\"extract any sentences about value or price and put each of them in comma separated python list\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response_schemas = [gift_schema,delivery_days_schema,price_value_schema]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_parser = StructuredOutputParser.from_response_schemas(response_schemas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "format_instructions = output_parser.get_format_instructions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customer_review = \"\"\"\\\n",
+    "this tea set arrived in a weeks time. it is really nice.So beautiful. \\\n",
+    "i got it as a gift for my sister ans she was really overjoyed. \\\n",
+    "\"\"\"\n",
+    "\n",
+    "review_template =\"\"\"\\\n",
+    "for the following text, extract the following information:\n",
+    "gift:was the item purchased as a gift for someone else?answer true if yes else false\\\n",
+    "delivery_days:how many days was the product delivered in?if not mentioned return -1\\\n",
+    "price_value: extract any sentences about value or price and put each of them in comma separated python list\n",
+    "\n",
+    "format the output as JSON with the following keys:\n",
+    "gift\n",
+    "delivery_days\n",
+    "price_value\n",
+    "\n",
+    "text: {text}\n",
+    "\n",
+    "{format_instructions}\n",
+    "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "prompt = ChatPromptTemplate.from_template(template=review_template)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "messages = prompt_template.format_messages(text=customer_review, format_instructions=format_instructions)\n",
+    "chat = ChatOpenAI(temperature = 0.0)\n",
+    "response = chat(messages)\n",
+    "print(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_dict = output_parser.parse(response.content)"
+   ]
   }
  ],
  "metadata": {
