added heap insertion and deletion algos

--- a/notebooks/sortingAlgos.ipynb
+++ b/notebooks/sortingAlgos.ipynb
@@ -75,6 +75,135 @@
     "                    \n",
     "        return alist\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insertInHeap(arr,element): #timeComplexity: logn\n",
+    "    arr.append(element)\n",
+    "    child = len(arr)-1\n",
+    "    print(len(arr))\n",
+    "    parent = child//2\n",
+    "    while arr[child]>parent and parent>0:\n",
+    "        temp = arr[parent]\n",
+    "        arr[parent]= arr[child]\n",
+    "        arr[child]=temp\n",
+    "\n",
+    "        child = parent\n",
+    "        parent = child//2\n",
+    "    \n",
+    "    return arr\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "[-1, 60, 50, 20, 30, 10, 8, 16, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = [-1,50,30,20,15,10,8,16]\n",
+    "print(insertInHeap(arr,60))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def popLargest(heapArr):\n",
+    "    element = heapArr[1]\n",
+    "    lastIndex = len(heapArr)-1\n",
+    "    heapArr[1]=heapArr[lastIndex]\n",
+    "    heapArr[lastIndex] = element\n",
+    "\n",
+    "    curr = 1\n",
+    "    leftChild = 2*curr\n",
+    "    rigthChild = 2*curr +1\n",
+    "    largest = 0\n",
+    "    if leftChild < len(heapArr)-2 and heapArr[leftChild]>heapArr[curr]:\n",
+    "            largest = leftChild\n",
+    "    elif rigthChild < len(heapArr)-2 and heapArr[rigthChild]>heapArr[curr]:\n",
+    "            largest = rigthChild\n",
+    "\n",
+    "    while largest:\n",
+    "        temp = heapArr[largest]\n",
+    "        heapArr[largest] = heapArr[curr]\n",
+    "        heapArr[curr] = temp\n",
+    "\n",
+    "        curr = largest\n",
+    "        leftChild = 2*curr\n",
+    "        rigthChild = 2*curr +1\n",
+    "\n",
+    "        if leftChild <  len(heapArr)-2 and heapArr[leftChild]>heapArr[curr]:\n",
+    "            largest = leftChild\n",
+    "        elif rigthChild <  len(heapArr)-2 and heapArr[rigthChild]>heapArr[curr]:\n",
+    "            largest = rigthChild\n",
+    "        else:\n",
+    "            largest = 0\n",
+    "    \n",
+    "    return element\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1, 60, 50, 20, 30, 10, 8, 16, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1 = popLargest(arr)\n",
+    "arr1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
